--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <p>777</p>
     </div>
     <ul>
-        <li><img class="one" src="/7qQc5q6vuB.png" alt="cat"></li>
+        <li><img class="one" src="/photo/maxresdefault.jpg" alt="cat"></li>
         <li><a href="https://skillbox.ru/media/marketing/chto-takoe-vebsayt-kak-on-rabotaet-i-kak-sozdayut-sayty/?ysclid=m79bw21d7o716604685" target="_blank">главная</a></li>
         <li><a href="https://bigenc.ru/c/sait-2330b8?ysclid=m79bwqqgvv719692762" target="_blank">о нас</a></li>
         <li><a href="https://practicum.yandex.ru/blog/kak-sozdat-sayt-s-nulya-poshagovo/" target="_blank">корзина</a></li>
@@ -21,14 +21,14 @@
     </header>
     <main>
 
-        <img src="/i.webp" alt="problem">
+        <img src="/photo/i (1).webp" alt="problem">
         <p>Помидор — это плод томата, травянистого </p>
         <p>растения семейства паслёновых.</p>
         <p> На грядках растение стелется по земле,</p>
         <p> а в теплице вырастает до 1–3 метров в высоту.</p>
         <p class="ttt">Стоимость 1кг = 534 рубля.</p>
        
-        <img src="/i (1).webp" alt="problem">
+        <img src="/photo/i.webp" alt="problem">
         <p>Огурец — самый низкокалорийный и водянистый </p>
         <p>из овощей, ведь он на 94–96% состоит из воды</p>
         <p>Это стелящаяся лиана, которая укореняется в </p>
@@ -37,7 +37,7 @@
         <p>тонкими спиралевидными усиками.[</p>
         <p class="ttt">Стоимость 1кг = 653 рубля.</p>
       
-        <img src="/i (2).webp" alt="problem">
+        <img src="/photo/2v136x7uni303p3na9jvnnz72ignsmhw.jpg" alt="problem">
         <p>Лук Allium cepa L., от латинского cepa, что  </p>
          <p>означает "лук", также известный как репчатый </p>
          <P>лук или обыкновенный лук, - это овощ, который </P>
